adjust spark working directories