@@ -66,24 +66,20 @@ if [ "$1" != 'sran:D' ]; then
     echo "[Father] Working directory  : '$(pwd)'"
     echo "[Father] Path of this script: '$this'"
 
-    export sparkLogs=$HOME/spark/logs
-    export sparkTmp=$(mktemp) #$HOME/spark/tmp
-    mkdir -p "$sparkLogs" "$sparkTmp"
-
-    # these variables must be set!
-    # http://spark.apache.org/docs/latest/configuration.html#application-properties
-    export SPARK_ROOT=$HOME/spark-1.5.2-bin-hadoop2.6/
-    export SPARK_JAVA_OPTS+="-XX:+UseParallelGC -XX:MaxPermSize=5G"
+    # Exported Variables are available after srun! You can test this out with
+    # salloc -N 2
+    #   mimi=momo
+    #   srun bash -c 'echo [$(hostname)] mimi = $mimi'
+    #     [taurusi1052] mimi =
+    #     [taurusi1053] mimi =
+    #   export mimi
+    #   srun bash -c 'echo mimi = $mimi'
+    #     [taurusi1052] mimi = momo
+    #     [taurusi1053] mimi = momo
     export SPARK_DAEMON_MEMORY=$(( $SLURM_MEM_PER_CPU * $SLURM_CPUS_PER_TASK / 2 ))m
     export SPARK_MEM=$SPARK_DAEMON_MEMORY
-    export SPARK_WORKER_DIR=$sparkLogs
-    export SPARK_LOCAL_DIRS=$sparkTmp
-    export SPARK_MASTER_PORT=7077
-    export SPARK_MASTER_WEBUI_PORT=8080
     export SPARK_WORKER_CORES=$SLURM_CPUS_PER_TASK
 
-    echo "SPARK_LOCAL_DIRS = $SPARK_LOCAL_DIRS"
-    echo "SPARK_WORKER_DIR = $SPARK_WORKER_DIR"
     echo "[Father] srun $script 'sran:D' $@"
     srun "$script" 'sran:D' "$@"
     echo "[Father] srun finished, exiting now"
@@ -91,6 +87,37 @@ if [ "$1" != 'sran:D' ]; then
 }
 # If run by srun, then decide by $SLURM_PROCID whether we are master or worker
 else
+    # mktemp -d must run for each host, that's why this is only done if
+    # srun was called on this script! Else the temporary directory would be
+    # created on tauruslogin
+    #export sparkLogs=$HOME/spark/logs
+    #mkdir -p "$sparkLogs"
+    sparkTmp=$(mktemp -d)   # using $HOME/spark/tmp is not a good idea as it is slow and shared
+    echo "[$(hostname)] Spark Working Directory (Logs, Distributed Jar, ...): $sparkTmp"
+
+    # these variables must be set!
+    # http://spark.apache.org/docs/latest/configuration.html#application-properties
+    export SPARK_ROOT=$HOME/spark-1.5.2-bin-hadoop2.6/
+    # SPARK_JAVA_OPTS is interpreted by
+    # spark-1.5.2/core/src/main/scala/org/apache/spark/SparkConf.scala
+    # and then used in
+    # spark-1.5.2/launcher/src/main/java/org/apache/spark/launcher/SparkClassCommandBuilder.java
+    export SPARK_JAVA_OPTS+=" -XX:+UseParallelGC "
+    # This folder will contain the distributed jar and the output logs ...
+    # This is a tad sad, because that means if I want to store the jar locally,
+    # then I also have to store the logs locally and therefore not really
+    # accessible from tauruslogin, only from the spark WebUI.
+    # -> Well you cann use scp and ssh directly ... (and thereby circumvent SLURM)
+    export SPARK_WORKER_DIR=$sparkTmp  # $sparkLogs
+    # Not sure what is stored in here: "Directory to use for "scratch" space in Spark"
+    # it is saved to the variable 'workDir' in
+    # spark-1.5.2/core/src/main/scala/org/apache/spark/deploy/worker/WorkerArguments.scala
+    # It is suggest, that SPARK_LOCAL_DIRS overrides spark.local.dir in
+    # spark-1.5.2/core/src/test/scala/org/apache/spark/storage/LocalDirsSuite.scala:
+    export SPARK_LOCAL_DIRS=$sparkTmp
+    export SPARK_MASTER_PORT=7077
+    export SPARK_MASTER_WEBUI_PORT=8080
+
     #echo "SLURM_PROCID = $SLURM_PROCID"
 
     module load scala/2.10.4 java/jdk1.7.0_25 cuda/7.0.28
@@ -119,7 +146,7 @@ else
 
         # This can be used for debugging purposed and/or to find out the WebUI address
         # Furthermore this is necessary to submit jobs to the spark instance!
-        echo "spark://$SPARK_MASTER_IP:$SPARK_MASTER_PORT" > "$sparkLogs/${SLURM_JOBID}_spark_master"
+        echo "spark://$SPARK_MASTER_IP:$SPARK_MASTER_PORT" > "$HOME/spark/logs/${SLURM_JOBID}_spark_master"
 
         echo "[Process $SLURM_PROCID] Starting Master at spark://$SPARK_MASTER_IP:$SPARK_MASTER_PORT (WebUI: $SPARK_MASTER_WEBUI_PORT)"
 
@@ -127,10 +154,24 @@ else
             --ip $SPARK_MASTER_IP                                           \
             --port $SPARK_MASTER_PORT                                       \
             --webui-port $SPARK_MASTER_WEBUI_PORT &
+        echo "[Process $SLURM_PROCID] spark master finished, trying to start slave now!"
 
-        echo "[Process $SLURM_PROCID] spark master finished, exiting now!"
+        # For some reason there was a bug with creating a temporary directory:
+        # java.io.IOException: Failed to create a temp directory (under ) after 10 attempts!
+        #   https://groups.google.com/forum/#!topic/spark-users/aWva61WAnMc
+        #   https://issues.apache.org/jira/browse/SPARK-2325
+        # My guess is that the automatically chosen folder name only depends
+        # on things like the hostname, but not the process ID, therefore
+        # clashing if trying to run Master and Executor on one node ...
+        # But I also did many other things wrong, like using mktemp instead
+        # of mktemp -d and so on.
+        sparkTmp=$(mktemp -d)
+        echo "[$(hostname)] Spark Working Directory (Logs, Distributed Jar, ...): $sparkTmp"
+        export SPARK_JAVA_OPTS+=" -Dspark.local.dir=$sparkTmp "
+        export SPARK_LOCAL_DIRS=$sparkTmp
+        export SPARK_WORKER_DIR=$sparkTmp
 
-        MASTER_NODE=spark://$(scontrol show hostname $SLURM_NODELIST | head -n 1):7077
+        MASTER_NODE=spark://$SPARK_MASTER_IP:$SPARK_MASTER_PORT
         "$SPARK_ROOT/bin/spark-class" org.apache.spark.deploy.worker.Worker $MASTER_NODE
         echo "[Process $SLURM_PROCID] spark master + slave finished, exiting now!"
     }
@@ -138,7 +179,7 @@ else
     {
         # This does similar things as vanilla $SPARK_ROOT/sbin/start-slave.sh but slurm compatible
         # scontrol show hostname is used to convert host20[39-40] to host2039
-        MASTER_NODE=spark://$(scontrol show hostname $SLURM_NODELIST | head -n 1):7077
+        MASTER_NODE=spark://$(scontrol show hostname $SLURM_NODELIST | head -n 1):$SPARK_MASTER_PORT
         echo "[Process $SLURM_PROCID] Process $SLURM_PROCID starting slave at $(hostname) linked to $MASTER_NODE"
 
         "$SPARK_ROOT/bin/spark-class" org.apache.spark.deploy.worker.Worker $MASTER_NODE
